fixed tech stack animation alignment

--- a/index.css
+++ b/index.css
@@ -145,6 +145,7 @@ nav > ol {
 #searchtech {
     width: 600px;
     height: auto;
+    text-align: center;
 }
 
 #name {
